--- a/spec/ndx-multisubjects.namespace.yaml
+++ b/spec/ndx-multisubjects.namespace.yaml
@@ -5,10 +5,11 @@ namespaces:
   - Oliver Ruebel
   contact:
   - neha.thomas@jhuapl.edu
-  - ''
-  doc: Allow for multiple subjects to be represented in a single nwb file. This is
-    for experiments where subjects are being recorded at the same time in the same
-    session.
+  - rly@lbl.gov
+  - oruebel@lbl.gov
+  doc: Allow for multiple subjects to be represented in a single NWB file. This 
+    is for experiments where subjects are being recorded at the same time in the
+    same session.
   name: ndx-multisubjects
   schema:
   - namespace: core
