--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,17 +4,18 @@ build-backend = "hatchling.build"
 
 [project]
 name = "ndx-multisubjects"
-version = "0.1.0"
+version = "0.1.1"
 authors = [
     { name="Neha Thomas", email="neha.thomas@jhuapl.edu" },
     { name="Ryan Ly", email="rly@lbl.gov" },
 ]
 description = "Allow for multiple subjects to be represented in a single nwb file. This is for experiments where subjects are being recorded at the same time in the same session."
 readme = "README.md"
-requires-python = ">=3.9"
+requires-python = ">=3.8"
 license = {text = "BSD-3-Clause"}
 classifiers = [
     "Programming Language :: Python",
+    "Programming Language :: Python :: 3.8",
     "Programming Language :: Python :: 3.9",
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
